<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Budżet domowy</string>

    <!-- LOGIN -->
    <string name="sign_in_info">Użyj konta Google, przez które masz dostęp do swojego arkusza budżetu domowego w Google Docs.</string>
    <string name="sign_in_error">Wystąpił błąd podczas logowania</string>
    <string name="privacy_policy">Zapoznaj się z <![CDATA[<b><a href="https://docs.google.com/document/d/1vs5tYH70oarsbm7EOnz5Rle43alCRjuJJAlB9IGi5Fs">Polityką prywatności"</a></b>]]></string>

    <!-- PICKER -->
    <string name="enter_spreadsheet_url">Wprowadź link do arkusza budżetu domowego Google Docs:</string>
    <string name="spreadsheet_url_hint">Link do arkusza</string>
    <string name="connect_spreadsheet">Połącz arkusz</string>
    <string name="create_spreadsheet">Jak stworzyć własną kopię arkusza?</string>
    <string name="spreadsheet_template">Wersja szablonu:</string>
    <string-array name="templates_array">
        <item>2021/2022</item>
        <item>2020</item>
        <item>2019</item>
    </string-array>

    <!-- MAIN -->
    <string name="incomes">Przychody</string>
    <string name="expenses">Wydatki</string>
    <string name="total">Razem</string>
    <string name="of">z %s</string>
    <string name="percent">%d%%</string>
    <string name="load_error_title">Wystąpił błąd</string>
    <string name="load_error_message">Nie udało się pobrać danych budżetowych z wybranego arkusza. Upewnij się, że wybrałeś odpowiednią wersję szablonu.</string>
    <string name="try_again">Ponów próbę</string>
    <string name="add_transaction">Dodaj transakcję</string>
    <string name="transaction_added_message">Transakcja została pomyślnie dodana do Twojego budżetu.</string>
    <string name="pick_document">Zmień arkusz</string>
    <string name="about_app">O aplikacji</string>
    <string name="faq">Pomoc / FAQ</string>
    <string name="sign_out">Wyloguj się</string>
    <string name="old_financial_year_warning">Wybrany arkusz jest na rok %s. Połącz aplikację z nowym arkuszem na aktualny rok, wybierając opcję \"Połącz arkusz\" w menu.</string>

    <!-- TRANSACTION -->
    <string name="new_transaction">Nowa transakcja</string>
    <string name="calculator">Kalkulator</string>
    <string name="add">Dodaj</string>
    <string name="note_hint">Dodaj notatkę</string>
    <string name="amount_hint">0,00</string>
    <string name="currency">zł</string>
    <string name="add_transaction_error_message">Nie udało się dodać transakcji do budżetu.</string>
    <string name="calc_dialog_clear">Wymaż</string>
    <string name="calc_dialog_erase">Wymaż</string>

    <!-- ABOUT -->
    <string name="version">Wersja</string>
    <string name="author" tools:ignore="Typos">Autor</string>
    <string name="me">Paweł Gajda</string>
    <string name="app_icon">Ikona aplikacji</string>
    <string name="app_icon_author"><![CDATA[<b><a href="https://www.flaticon.com/authors/vectors-market" title="Vectors Market">Vectors Market</a>]]></string>
</resources>
