<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/monthHeaderView"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Kwiecień" />

        <TextView
            android:id="@+id/incomesLabelView"
            style="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/incomes"
            app:layout_constraintEnd_toStartOf="@id/expensesLabelView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/monthHeaderView" />

        <TextView
            android:id="@+id/incomesTextView"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/incomesLabelView"
            app:layout_constraintStart_toStartOf="@id/incomesLabelView"
            app:layout_constraintTop_toBottomOf="@id/incomesLabelView"
            tools:text="10 000,00 zł" />

        <TextView
            android:id="@+id/expensesLabelView"
            style="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/expenses"
            app:layout_constraintEnd_toStartOf="@id/totalLabelView"
            app:layout_constraintStart_toEndOf="@id/incomesLabelView"
            app:layout_constraintTop_toBottomOf="@id/monthHeaderView" />

        <TextView
            android:id="@+id/expensesTextView"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/expensesLabelView"
            app:layout_constraintStart_toStartOf="@id/expensesLabelView"
            app:layout_constraintTop_toBottomOf="@id/expensesLabelView"
            tools:text="8 500,00 zł" />

        <TextView
            android:id="@+id/totalLabelView"
            style="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/total"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/expensesLabelView"
            app:layout_constraintTop_toBottomOf="@id/monthHeaderView" />

        <TextView
            android:id="@+id/totalTextView"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/totalLabelView"
            app:layout_constraintStart_toStartOf="@id/totalLabelView"
            app:layout_constraintTop_toBottomOf="@id/totalLabelView"
            tools:text="1 500,00 zł" />

        <TextView
            android:id="@+id/incomesHeaderView"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/incomes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/incomesTextView" />

        <TextView
            android:id="@+id/allIncomesTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/incomesHeaderView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:buttonSize="wide"
        tools:visibility="gone" />

</FrameLayout>
